# ece6360-project

./: .gitignore  Beam.cuh  Bessel.cuh  CMakeLists.txt  Mesh.cuh  Propagator.cuh  README.md  Scatter.cuh  Sphere.cuh  Vec2.cuh  Vec3.cuh  helper.cuh  helper.h  main.cu  myMath.cuh  myMath.h  parameter.txt
